<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenTransparent1"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="101dp"
        android:layout_height="240dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="255dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="460dp"
        android:contentDescription="@string/active_workers_header"
        android:rotation="90"
        app:srcCompat="@drawable/miningrig" />

    <TextView
        android:id="@+id/current_hashrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/current_hashrate" />

    <TextView
        android:id="@+id/active_workers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="130dp"
        android:text="@string/active_workers" />

    <TextView
        android:id="@+id/tap_update"
        android:layout_width="138dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="239dp"
        android:text="@string/tap_update" />

    <TextView
        android:id="@+id/average_hashrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="204dp"
        android:text="@string/average_hashrate" />

    <TextView
        android:id="@+id/active_workers_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="98dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/active_workers_header"
        android:textColor="#E91E63"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="181dp"
        android:layout_marginLeft="181dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="0dp"
        android:text="@string/last_updated" />

    <TextView
        android:id="@+id/average_hashrate_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="162dp"
        android:text="@string/average_hashrate_header"
        android:textColor="#E91E63"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/current_hashrate_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/current_hashrate_header"
        android:textColor="#E91E63"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>